Start blazor async globalization aproach

--- a/Crypto.Blazor/Client/_Imports.razor
+++ b/Crypto.Blazor/Client/_Imports.razor
@@ -10,3 +10,5 @@
 @using Crypto.Blazor.Client.Shared
 @using Crypto.Blazor.Client.Components
 @using Blazor.Shared.State
+@using Crypto.Blazor.Client.Shared.ResourceFiles
+@using Microsoft.Extensions.Localization
