--- a/Crypto.Blazor/Client/Components/LocaleSwitcher.razor
+++ b/Crypto.Blazor/Client/Components/LocaleSwitcher.razor
@@ -2,7 +2,7 @@
     <div class="selected stop-propagation" @onclick="HandleToggle">
         <span class="element stop-propagation">
             <img class="stop-propagation" src="@($"/img/icons/flag-{CurrentCulture}.svg")" alt="@CurrentCulture">
-            @CurrentCulture
+            @CurrentCulture - @Localizer["CurrentLanguage"]
         </span>
     </div>
     <ul class="list @GetIsOpenCssClass()">
@@ -22,8 +22,11 @@
 </div>
 
 @using System.Globalization
+@using System.Reflection
+@using System.Resources
 @inject NavigationManager Nav
 @inject IJSRuntime JS
+@inject IStringLocalizer<Resource> Localizer
 @code {
     public string[] SupportedCultures = new[] { "en", "es", "pt" };
     private CultureInfo Culture { get; set; } = CultureInfo.CurrentCulture;
@@ -82,6 +85,24 @@
         var cultureEscaped = Uri.EscapeDataString(newValue.Name);
         var uriEscaped = Uri.EscapeDataString(uri);
         CurrentCulture = value;
+
+        //Localizer = new StringLocalizer<Resource>();
+
+        //ResourceManager rm = new ResourceManager("Resource.resx",  Assembly.GetExecutingAssembly());  
+        //ResourceManager rm = new ResourceManager("Crypto.Blazor.Client.Shared.ResourceFiles.Resource", Assembly.GetExecutingAssembly());  
+        //rm.ReleaseAllResources();
+        //ResourceSet? rm2 = rm?.GetResourceSet(newValue, true, true);
+        //var strTest = rm?.GetString("CurrentLanguage", newValue);
+        //System.Console.WriteLine(strTest);
+        //string strWebsite = rm.GetString("CurrentLanguage",CultureInfo.CurrentCulture);  
+        //string strName = rm.GetString("CurrentLanguage");
+
+        //System.Console.WriteLine(strWebsite);
+        //System.Console.WriteLine(strName);
+
+        
+
+
         try
         {
             await JS.InvokeVoidAsync("blazorCulture.set", newValue.ToString());
