--- a/Crypto.Blazor/Server/Pages/_Host.cshtml
+++ b/Crypto.Blazor/Server/Pages/_Host.cshtml
@@ -1,7 +1,10 @@
 @page "/"
+@using System.Globalization
 
 @{
     Layout = "./Shared/_Layout.cshtml";
 }
 
-@section SEO { }
+@section SEO {
+    <title>Crypto.Blazor - @CultureInfo.CurrentCulture.ToString()</title>
+}
