--- a/Crypto.Blazor/Server/Pages/Shared/_Layout.cshtml
+++ b/Crypto.Blazor/Server/Pages/Shared/_Layout.cshtml
@@ -1,6 +1,10 @@
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 @using System.Globalization
 
+@{
+    CultureDefiner.DefineCulture(Context);
+}
+
 <!DOCTYPE html>
 <html lang="@CultureInfo.CurrentCulture.ToString()">
 
@@ -8,7 +12,6 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width">
     @RenderSection("SEO", required: false)
-    <title>Crypto.Blazor</title>
     <base href="/" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="Crypto.Blazor.Client.styles.css" rel="stylesheet" />
@@ -19,14 +22,11 @@
 
 <body>
     <div id="app">
-        <component type="typeof(Crypto.Blazor.Client.App)" render-mode="Static" />
+        <component type="typeof(Crypto.Blazor.Client.App)" render-mode="WebAssemblyPrerendered" />
     </div>
 
-    <script src="_framework/blazor.webassembly.js" autostart="false"></script>
+    <script src="_framework/blazor.webassembly.js"></script>
     <script src="js/app.js"></script>
-    <script>
-        Blazor.start({ applicationCulture: "pt" });
-    </script>
     <script>navigator.serviceWorker.register("service-worker.js");</script>
     <persist-component-state />
 </body>
