Style currencies components and create Link component with a get path helper

--- a/Crypto.Blazor/Client/Components/Introduction.razor
+++ b/Crypto.Blazor/Client/Components/Introduction.razor
@@ -1,5 +1,5 @@
 <div class="Introduction">
     <h1>Negocie criptoativos com simplicidade e segurança.</h1>
     <p>Faça depósitos e saques instantâneos com Pix: 24 horas por dia, 7 dias por semana.</p>
-    <Button Label="Entrar" Href="/" />
+    <Button Label="Entrar" Href="@($"/dashboard{ Link.GetCultureQueryString() }")" />
 </div>
