--- a/Crypto.Blazor/Client/Shared/Footer.razor
+++ b/Crypto.Blazor/Client/Shared/Footer.razor
@@ -1,13 +1,13 @@
 <footer class="Footer">
     <ul class="menu">
         <li>
-            <a href="/">Limites</a>
+            <Link Href="/" Label="Limites" />
         </li>
         <li>
-            <a href="/">Taxas e prazos</a>
+            <Link Href="/" Label="Taxas e prazos" />
         </li>
         <li>
-            <a href="/">Termos de uso</a>
+            <Link Href="/" Label="Termos de uso" />
         </li>
     </ul>
     <p>Powered by Transfero</p>
