--- a/Crypto.Blazor/Client/Shared/Header.razor
+++ b/Crypto.Blazor/Client/Shared/Header.razor
@@ -1,9 +1,9 @@
 <header class="Header">
     <div className="nice-transition-all">
         <div class="wrap">
-            <a href="/">
+            <Link Href="/">
                 <img src="/img/logo.svg" alt="Transfero Logo" />
-            </a>
+            </Link>
             <div class="actions">
                 <LocaleSwitcher />
                 <MenuButton OnClick="HandleOnOpenMenu" />
