--- a/Crypto.Blazor/Client/Shared/Menu.razor
+++ b/Crypto.Blazor/Client/Shared/Menu.razor
@@ -3,13 +3,13 @@
     <nav class="nav">
         <ul>
             <li>
-                <a href="/" @onclick="HandleOnCloseMenu">Home</a>
+                <Link Href="/" Label="Home" OnClick="HandleOnCloseMenu" />
             </li>
             <li>
-                <a href="/" @onclick="HandleOnCloseMenu">FAQ</a>
+                <Link Href="/" Label="FAQ" OnClick="HandleOnCloseMenu" />
             </li>
             <li>
-                <a href="/" @onclick="HandleOnCloseMenu">Login</a>
+                <Link Href="/" Label="Login" OnClick="HandleOnCloseMenu" />
             </li>
         </ul>
     </nav>
