--- a/Crypto.Blazor/Client/_Imports.razor
+++ b/Crypto.Blazor/Client/_Imports.razor
@@ -9,6 +9,7 @@
 @using Crypto.Blazor.Client
 @using Crypto.Blazor.Client.Shared
 @using Crypto.Blazor.Client.Components
+@using Crypto.Blazor.Client.Components.Currencies
 @using Blazor.Shared.State
 @using Crypto.Blazor.Client.Shared.ResourceFiles
 @using Microsoft.Extensions.Localization
