--- a/Crypto.Blazor/Client/Shared/Menu.razor.css
+++ b/Crypto.Blazor/Client/Shared/Menu.razor.css
@@ -41,7 +41,7 @@
     margin-top: 2rem;
 }
 
-.Menu .nav a {
+.Menu .nav ::deep a {
     color: white;
     font-size: 22px;
     font-weight: 500;
@@ -50,7 +50,7 @@
     border-bottom: solid 1px rgba(255, 255, 255, .15);
 }
 
-.Menu .nav a:hover {
+.Menu .nav ::deep a:hover {
     background-color: white;
     color: var(--clr-primary);
 }
@@ -79,9 +79,7 @@
         min-width: auto;
     }
 
-    .nav {
-        a {
-            font-size: 18px;
-        }
+    .nav ::deep a {
+        font-size: 18px;
     }
 }
