--- a/Crypto.Blazor/Client/Components/Link.razor
+++ b/Crypto.Blazor/Client/Components/Link.razor
@@ -1,5 +1,6 @@
-<a href="@($"{ Href }{ GetCultureQueryString(IsUniqueQueryString) }")" target="@Target" @onclick="@(() => OnClick?.Invoke())">
-    @if (ChildContent != null) 
+<a href="@($"{ Href }{ GetCultureQueryString(IsUniqueQueryString) }")" target="@Target"
+    @onclick="@(() => OnClick?.Invoke())">
+    @if (ChildContent != null)
     {
         @ChildContent
     }
