--- a/crypto-react/pages/dashboard.module.scss
+++ b/crypto-react/pages/dashboard.module.scss
@@ -9,6 +9,12 @@
     button {
         min-width: 200px;
     }
+
+    p {
+        font-size: 14px;
+        text-align: center;
+        width: 100%;
+    }
 }
 
 .result {
