--- a/Crypto.Blazor/Client/_Imports.razor
+++ b/Crypto.Blazor/Client/_Imports.razor
@@ -11,5 +11,7 @@
 @using Crypto.Blazor.Client.Components
 @using Crypto.Blazor.Client.Components.Currencies
 @using Blazor.Shared.State
+@using Blazor.Shared.Models
+@using Blazor.Shared.Service
 @using Crypto.Blazor.Client.Shared.ResourceFiles
 @using Microsoft.Extensions.Localization
